update for macos display blank window