@@ -1,6 +1,9 @@
+package launch;
 import java.awt.AlphaComposite;
 import java.awt.BasicStroke;
+import java.awt.BorderLayout;
 import java.awt.Color;
+import java.awt.Component;
 import java.awt.Dimension;
 import java.awt.Graphics;
 import java.awt.Graphics2D;
@@ -10,17 +13,27 @@ import java.awt.Insets;
 import java.awt.RenderingHints;
 import java.awt.geom.RoundRectangle2D;
 import java.awt.image.BufferedImage;
+import java.io.File;
+import java.net.URI;
 import java.net.URL;
 import javax.imageio.ImageIO;
+import javax.swing.JButton;
+import javax.swing.JComponent;
 import javax.swing.JFrame;
+import javax.swing.JLabel;
+import javax.swing.JLayeredPane;
 import javax.swing.JPanel;
+import javax.swing.JWindow;
 import javax.swing.SwingUtilities;
+import javax.swing.border.EmptyBorder;
+import javax.swing.text.LayeredHighlighter.LayerPainter;
+
 //https://stackoverflow.com/questions/15233526/image-with-shadow-and-rounded-edges-in-java-swing
-public class RoundPanelTest {
+public class TransparentRoundPanel {
 
     private JFrame frame;
 
-    public RoundPanelTest() {
+    public TransparentRoundPanel() {
         initComponents();
     }
 
@@ -30,26 +43,74 @@ public class RoundPanelTest {
         SwingUtilities.invokeLater(new Runnable() {
             @Override
             public void run() {
-                new RoundPanelTest();
+                new TransparentRoundPanel();
             }
         });
     }
 
     private void initComponents() {
         frame = new JFrame();
-        frame.setTitle("Example");
+        //frame.setTitle("Example");
         frame.setUndecorated(true);
-        frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);//app exited when frame closes
+        //frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);//app exited when frame closes
         //frame.setResizable(false);
         frame.setLayout(new GridBagLayout());
         frame.setBackground(new Color(50, 50, 50, 0));
+        frame.setSize(600, 600);
+        
+        JComponent contentPane = new JPanel();
+        contentPane.setOpaque(false);
+		contentPane.setBorder(new EmptyBorder(0, 0, 0, 0));
+		contentPane.setLayout(new BorderLayout(0, 0));
+		frame.setContentPane(contentPane);
+		
+		JLayeredPane layeredPane = new JLayeredPane();
+		layeredPane.setOpaque(false);
+		contentPane.add(layeredPane, BorderLayout.CENTER);
+		//layeredPane.setLayout(new BorderLayout(0, 0));
+        GridBagConstraints gc = new GridBagConstraints();
+        gc.fill = GridBagConstraints.HORIZONTAL;
+        gc.insets = new Insets(0, 0, 0,0);
+        //frame.add(new RoundedPanel(), gc);
+        GridBagConstraints gbc_layeredPane = new GridBagConstraints();
+        gbc_layeredPane.fill = GridBagConstraints.BOTH;
+        gbc_layeredPane.gridx = 0;
+        gbc_layeredPane.gridy = 1;
+        RoundedPanel rp = new RoundedPanel();
+        //rp.setSize(300,300);
+        layeredPane.add(rp, new Integer(99),1);
+        layeredPane.setPreferredSize(rp.getSize());
+        //frame.add(rp);
+		JLabel lblNewLabel = new JLabel("New label");
+		lblNewLabel.setBounds(0,0,40,40);
+		layeredPane.add(lblNewLabel, new Integer(100),2);
+		
+		frame.setVisible(true);
+		frame.setLocation(200, 200);
+		/*
         GridBagConstraints gc = new GridBagConstraints();
         gc.fill = GridBagConstraints.HORIZONTAL;
         gc.insets = new Insets(10, 10, 10,10);
-        frame.add(new RoundedPanel(), gc);
+        //frame.add(new RoundedPanel(), gc);
+        JLayeredPane layeredPane = new JLayeredPane();
+        GridBagConstraints gbc_layeredPane = new GridBagConstraints();
+        gbc_layeredPane.fill = GridBagConstraints.BOTH;
+        gbc_layeredPane.gridx = 0;
+        gbc_layeredPane.gridy = 1;
+        frame.setBounds(100, 100, 450, 300);
+		frame.setSize(400,400);
 
+        frame.getContentPane().add(layeredPane, gbc_layeredPane);
+        JLabel jb = new JLabel("HELLO");
+        jb.setBounds(0, 0, 60, 60);
+        jb.setBackground(Color.green);
+        layeredPane.add(jb, new Integer(100),2);
+*/
         //pack frame (size components to preferred size)
-        frame.pack();
+       // frame.pack();
+//		
+		frame.pack();
+		System.out.println(layeredPane.getHeight());
         frame.setVisible(true);//make frame visible
     }
 }
@@ -67,7 +128,7 @@ class RoundedPanel extends JPanel {
     /**
      * Sets if it drops shadow
      */
-    protected boolean shady = true;
+    protected boolean shady = false;
     /**
      * Sets if it has an High Quality view
      */
@@ -80,11 +141,11 @@ class RoundedPanel extends JPanel {
     /**
      * Distance between shadow border and opaque panel border
      */
-    protected int shadowGap = 10;
+    protected int shadowGap = 0;
     /**
      * The offset of shadow.
      */
-    protected int shadowOffset = 4;
+    protected int shadowOffset = 0;
     /**
      * The transparency value of shadow. ( 0 - 255)
      */
@@ -97,15 +158,19 @@ class RoundedPanel extends JPanel {
         super();
         setOpaque(false);
         try {
-            image = ImageIO.read(new URL("https://www.gettyimages.ie/gi-resources/images/Homepage/Hero/UK/CMS_Creative_164657191_Kingfisher.jpg"));
+        	URL imgUrl = new File("/Users/alexwang/git/launch/src/main/java/launch/Angry_Bird_red.png").toURL();
+            image = ImageIO.read(imgUrl);
 
         } catch (Exception ex) {
             ex.printStackTrace();
         }
         roundedImage = makeRoundedCorner(image, 20);//make image round
 
-        width = roundedImage.getWidth()+arcs.width/2;//set width and height of panel accordingly
-        height = roundedImage.getHeight()+arcs.height/2;
+        width = roundedImage.getWidth();//set width and height of panel accordingly
+       // width = roundedImage.getWidth()+arcs.width/2;//set width and height of panel accordingly
+        height = roundedImage.getHeight();
+       // height = roundedImage.getHeight()+arcs.height/2;
+        setSize(width,height);
     }
 
     public static BufferedImage makeRoundedCorner(BufferedImage image, int cornerRadius) {
@@ -166,7 +231,7 @@ class RoundedPanel extends JPanel {
         graphics.fillRoundRect(0, 0, width - shadowGap,
                 height - shadowGap, arcs.width, arcs.height);
         graphics.setColor(getForeground());
-        graphics.setStroke(new BasicStroke(strokeSize));
+        graphics.setStroke(new BasicStroke(0));
         graphics.drawRoundRect(0, 0, width - shadowGap,
                 height - shadowGap, arcs.width, arcs.height);
 
